--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+mdadm (4.4-6) sid; urgency=medium
+
+  * Updating to standards version 4.7.1.
+  * Updating to standards version 4.7.2.
+  * Adding updated Brazilian Poruguese debconf translations from Adriano
+    Rafael Gomes <adrianorg@debian.org> (Closes: #1099804).
+
+ -- Daniel Baumann <daniel@debian.org>  Wed, 12 Mar 2025 11:18:01 +0100
+
 mdadm (4.4-5) sid; urgency=medium
 
   * Updating watch file.
