--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-6devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.4-6.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 12 Mar 2025 15:29:09 +0000
+
 mdadm (4.4-6) sid; urgency=medium
 
   * Updating to standards version 4.7.1.
