--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -1,15 +1,15 @@
 # Dutch debconf translation of mdadm
 # Copyright (C) 2005-2008 Frans Pop <elendil@planet.nl>
 # Copyright (C) 2019 Maarten <Maarten@posteo.de>
-# Copyright (C) 2023 Frans Spiesschaert <Frans.Spiesschaert@yucom.be>
+# Copyright (C) 2023-2025 Frans Spiesschaert <Frans.Spiesschaert@yucom.be>
 # This file is distributed under the same license as the mdadm package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: mdadm_4.2+20230508-5\n"
+"Project-Id-Version: mdadm_4.4-5\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
 "POT-Creation-Date: 2025-01-23 07:30+0100\n"
-"PO-Revision-Date: 2023-07-10 22:09+0200\n"
+"PO-Revision-Date: 2025-03-10 18:34+0100\n"
 "Last-Translator: Frans Spiesschaert <Frans.Spiesschaert@yucom.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "Language: nl\n"
@@ -37,12 +37,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../mdadm.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Beginning with newer versions of the mdadm package, init-system "
-#| "integration is available for systemd only. This system seems to use an "
-#| "alternative init-system which might or might not leave your system "
-#| "unbootable."
 msgid ""
 "Beginning with newer versions of the mdadm package, init-system integration "
 "is available for systemd only. This system seems to use an alternative init-"
@@ -51,7 +45,8 @@ msgid ""
 msgstr ""
 "Vanaf nieuwere versies van het mdadm-pakket is init-systeemintegratie alleen "
 "beschikbaar voor systemd. Dit systeem lijkt een alternatief init-systeem te "
-"gebruiken waardoor uw systeem mogelijk niet meer kan worden opgestart."
+"gebruiken waardoor uw systeem mogelijk niet kan worden opgestart en er geen "
+"onderhoudstaken automatisch worden uitgevoerd."
 
 # Zie voor mijn notatie het artikel over 'disk array' in de Engelse Wikipedia. Zie ook het artikel over 'Disk-Array' in de Duitse Wikipedia. De Duitsers vertalen 'disk' dus niet naar 'Festplatte'.
 #. Type: boolean
@@ -59,7 +54,7 @@ msgstr ""
 #: ../mdadm.templates:3001
 msgid "Should mdadm run monthly redundancy checks of the MD arrays?"
 msgstr ""
-"Moet mdadm maandelijkse redundatiecontroles van de disk-arrays uitvoeren?"
+"Moet mdadm maandelijkse redundatiecontroles van de MD-arrays uitvoeren?"
 
 #. Type: boolean
 #. Description
@@ -104,9 +99,9 @@ msgid ""
 "mdadm can check once a day for degraded arrays and missing spares to ensure "
 "that such events don't go unnoticed."
 msgstr ""
-"mdadm kan eens per dag controleren op in verval geraakte disk-arrays en op "
-"ontbrekende reserveschijven om er zeker van te zijn dat die toestanden niet "
-"onopgemerkt blijven."
+"mdadm kan eens per dag controleren op in verval geraakte arrays en op "
+"ontbrekende reserveschijven om er zeker van te zijn dat zulke toestanden "
+"niet onopgemerkt blijven."
 
 #. Type: boolean
 #. Description
