--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mdadm (4.4-7) sid; urgency=medium
+
+  * Adding updated Dutch debconf translations from Frans Spiesschaert
+    <Frans.Spiesschaert@yucom.be> (Closes: #1100803).
+
+ -- Daniel Baumann <daniel@debian.org>  Wed, 19 Mar 2025 19:06:52 +0100
+
 mdadm (4.4-6) sid; urgency=medium
 
   * Updating to standards version 4.7.1.
