--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-7devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.4-7.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 19 Mar 2025 18:28:52 +0000
+
 mdadm (4.4-7) sid; urgency=medium
 
   * Adding updated Dutch debconf translations from Frans Spiesschaert
