Adding updated Brazilian Portuguese debconf translations from Adriano Rafael Gomes <adrianorg@debian.org> (Closes: #1103771).
Signed-off-by: Daniel Baumann <daniel@debian.org>

--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -7,11 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2023-06-18 07:24+0200\n"
-"PO-Revision-Date: 2025-01-18 17:52-0300\n"
+"POT-Creation-Date: 2025-01-23 07:30+0100\n"
+"PO-Revision-Date: 2025-04-21 09:20-0300\n"
 "Last-Translator: Adriano Rafael Gomes <adrianorg@debian.org>\n"
-"Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
-"org>\n"
+"Language-Team: pt_BR <debian-l10n-portuguese@lists.debian.org>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,12 +39,14 @@ msgstr ""
 msgid ""
 "Beginning with newer versions of the mdadm package, init-system integration "
 "is available for systemd only. This system seems to use an alternative init-"
-"system which might or might not leave your system unbootable."
+"system which might or might not leave your system unbootable and will not "
+"run any of the maintenance jobs automatically."
 msgstr ""
 "Começando com novas versões do pacote mdadm, a integração com o sistema de "
 "inicialização (\"init-system\") está disponível somente para systemd. Este "
-"sistema parece usar um sistema de inicialização que pode, ou não, deixar o "
-"seu sistema não inicializável."
+"sistema parece usar um sistema de inicialização alternativo que pode, ou "
+"não, deixar o seu sistema não inicializável e que não executará nenhuma das "
+"tarefas de manutenção automaticamente."
 
 #. Type: boolean
 #. Description
