--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-9devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.4-9.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Tue, 22 Apr 2025 11:43:47 +0100
+
 mdadm (4.4-9) sid; urgency=medium
 
   * Correcting copy paste error in watch file.
