--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-11devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.4-11.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Sat, 26 Apr 2025 07:25:21 +0100
+
 mdadm (4.4-11) sid; urgency=medium
 
   [ Daniel Baumann ]
