--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -1,5 +1,5 @@
 # Italian debconf translation of mdadm
-# Copyright (C) 2008-2020 Luca Monducci <luca.mo@tiscali.it>
+# Copyright (C) 2008-2025 Luca Monducci <luca.mo@tiscali.it>
 # This file is distributed under the same license as the mdadm package.
 #
 msgid ""
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: mdadm italian debconf\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
 "POT-Creation-Date: 2025-01-23 07:30+0100\n"
-"PO-Revision-Date: 2020-09-16 20:02+0200\n"
+"PO-Revision-Date: 2025-08-24 15:52+0200\n"
 "Last-Translator: Luca Monducci <luca.mo@tiscali.it>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "Language: it\n"
@@ -19,7 +19,7 @@ msgstr ""
 #. Description
 #: ../mdadm.templates:2001
 msgid "no systemd init-system detected"
-msgstr ""
+msgstr "Nessun sistema di avvio systemd rilevato"
 
 #. Type: note
 #. Description
@@ -28,6 +28,9 @@ msgid ""
 "The root filesystem of this system was detected to be on a RAID device, so "
 "mdadm might be required to run during boot to properly start your system."
 msgstr ""
+"Il filesystem di root di questo sistema è stato rilevato su un dispositivo "
+"RAID, quindi potrebbe essere necessario eseguire mdadm durante l'avvio per "
+"avviare correttamente il sistema."
 
 #. Type: note
 #. Description
@@ -38,6 +41,11 @@ msgid ""
 "system which might or might not leave your system unbootable and will not "
 "run any of the maintenance jobs automatically."
 msgstr ""
+"A partire dalle versioni più recenti del pacchetto mdadm, l'integrazione con "
+"il sistema di avvio è disponibile solo per systemd. Questo sistema sembra "
+"utilizzare un sistema di avvio alternativo che potrebbe rendere il sistema "
+"non avviabile e non eseguirà automaticamente alcuna operazione di "
+"manutenzione."
 
 #. Type: boolean
 #. Description
@@ -61,7 +69,7 @@ msgstr ""
 "(RAID). Questo è un processo che potrebbe richiedere molte risorse, in base "
 "alle impostazioni locali, ma può prevenire i rari casi di perdita di dati. "
 "Notare che questa verifica è di sola-lettura tranne quando riscontra degli "
-"errori; quando ci sono errori, mdadm prova a correggerli e potrebbe accedere "
+"errori; quando ci sono errori mdadm prova a correggerli e potrebbe accedere "
 "in scrittura al supporto."
 
 #. Type: boolean
@@ -72,7 +80,7 @@ msgid ""
 "01:06."
 msgstr ""
 "Se attivo, la configurazione predefinita prevede che il controllo sia "
-"eseguito la prima domenica di ogni mese alle 01.06."
+"eseguito la prima domenica di ogni mese alle 01:06."
 
 #. Type: boolean
 #. Description
@@ -127,90 +135,3 @@ msgid ""
 msgstr ""
 "Inserire l'indirizzo email dell'utente che deve ricevere le notifiche di "
 "eventi importanti legati al MD."
-
-#~ msgid "MD arrays needed for the root file system:"
-#~ msgstr "Array MD necessari per il file system di root:"
-
-#~ msgid ""
-#~ "Please enter 'all', 'none', or a space-separated list of devices such as "
-#~ "'md0 md1' or 'md/1 md/d0' (the leading '/dev/' can be omitted)."
-#~ msgstr ""
-#~ "Inserire \"all\", \"none\" oppure un elenco dei device separati da uno "
-#~ "spazio, per esempio \"md0 md1\" o \"md/1 md/d0\" (il \"/dev/\" iniziale "
-#~ "può essere omesso)."
-
-#~ msgid "for internal use - only the long description is needed."
-#~ msgstr "uso interno - è necessaria solo la descrizione lunga."
-
-#~ msgid ""
-#~ "If the system's root file system is located on an MD array (RAID), it "
-#~ "needs to be started early during the boot sequence. If it is located on a "
-#~ "logical volume (LVM), which is on MD, all constituent arrays need to be "
-#~ "started."
-#~ msgstr ""
-#~ "Se il file system di root è su un array MD (RAID), è necessario attivare "
-#~ "tale array all'inizio della sequenza d'avvio. Se è su un volume logico "
-#~ "(LVM), il quale è su un MD, è necessario attivare tutti gli array che "
-#~ "costituiscono il volume."
-
-#~ msgid ""
-#~ "If you know exactly which arrays are needed to bring up the root file "
-#~ "system, and you want to postpone starting all other arrays to a later "
-#~ "point in the boot sequence, enter the arrays to start here. "
-#~ "Alternatively, enter 'all' to simply start all available arrays."
-#~ msgstr ""
-#~ "Se si conoscono esattamente quali sono gli array da attivare per il file "
-#~ "system di root e si vuole rimandare l'attivazione di tutti gli altri "
-#~ "array a una fase successiva della sequenza d'avvio, inserire adesso gli "
-#~ "array da attivare. In alternativa, inserire \"all\" per attivare tutti "
-#~ "gli array disponibili."
-
-#~ msgid ""
-#~ "If you do not need or want to start any arrays for the root file system, "
-#~ "leave the answer blank (or enter 'none'). This may be the case if you are "
-#~ "using kernel autostart or do not need any arrays to boot."
-#~ msgstr ""
-#~ "Se non si ha bisogno o non si vuole attivare nessun array per il file "
-#~ "system di root, lasciare la risposta in bianco (oppure inserire "
-#~ "\"none\"). Questo potrebbe essere il caso se si utilizza l'attivazione "
-#~ "automatica da kernel oppure se non si ha bisogno di alcun array per "
-#~ "l'avvio."
-
-#~ msgid "An error occurred: device node does not exist"
-#~ msgstr "Errore: il nodo del device non esiste"
-
-#~ msgid "An error occurred: not a block device"
-#~ msgstr "Errore: non è un device a blocchi"
-
-#~ msgid "An error occurred: not an MD array"
-#~ msgstr "Errore: non è un array MD"
-
-#~ msgid "An error occurred: array not listed in mdadm.conf file"
-#~ msgstr "Errore: array non elencato nel file mdadm.conf"
-
-#~ msgid "Start arrays not listed in mdadm.conf?"
-#~ msgstr "Avviare gli array non elencati in mdadm.conf?"
-
-#~ msgid ""
-#~ "The specified array (${array}) is not listed in the configuration file ($"
-#~ "{config}). Therefore, it cannot be started during boot, unless you "
-#~ "correct the configuration file and recreate the initial ramdisk."
-#~ msgstr ""
-#~ "L'array specificato (${array}) non è presente nel file di configurazione "
-#~ "(${config}): quindi non può essere attivato durante l'avvio senza "
-#~ "correggere il file di configurazione e ricreare il ramdisk iniziale."
-
-#~ msgid ""
-#~ "This warning is only relevant if you need arrays to be started from the "
-#~ "initial ramdisk to be able to boot. If you use kernel autostarting, or do "
-#~ "not need any arrays to be started as early as the initial ramdisk is "
-#~ "loaded, you can simply continue. Alternatively, choose not to continue "
-#~ "and enter 'none' when prompted which arrays to start from the initial "
-#~ "ramdisk."
-#~ msgstr ""
-#~ "Questo avviso è pertinente solo se è necessario attivare gli array dal "
-#~ "ramdisk iniziale per permettere l'avvio. Con l'avvio automatico da kernel "
-#~ "o se non è necessario attivare gli array così presto come al caricamento "
-#~ "del ramdisk iniziale, si può proseguire. In alternativa, scegliere di non "
-#~ "continuare e inserire \"none\" quando viene chiesto quali array attivare "
-#~ "dal ramdisk iniziale."
