--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-13devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.4-13.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Thu, 18 Sep 2025 15:54:27 +0100
+
 mdadm (4.4-13) sid; urgency=medium
 
   * Adding patch from QRPp <awesome.walrus+github@gmail.com> to fix fails
