--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.5-1devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.5-1.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Sun, 04 Jan 2026 19:54:25 +0000
+
 mdadm (4.5-1) sid; urgency=medium
 
   * Updating to standards version 4.7.3.
