--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.5-2devuan1) unstable; urgency=medium
+
+  * Merge tag fastforward/4.5-2.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 07 Jan 2026 07:35:05 +0000
+
 mdadm (4.5-2) sid; urgency=medium
 
   * Adding Chinese (simplified) debconf translations from Yangfl
