--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.5-3devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.5-3.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 04 Feb 2026 21:50:09 +0000
+
 mdadm (4.5-3) sid; urgency=medium
 
   * Cherry-picking patch from upstream to load md_mod first before setting
