--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.5-5devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.5-5.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Thu, 19 Feb 2026 22:47:11 +0000
+
 mdadm (4.5-5) sid; urgency=medium
 
   * Updating watch file to version 5.
